# oprune

./: .gitignore  README.md  pyproject.toml
src/obs_prune/: args.py  files.py  main.py
src/oprune/: args.py  files.py  main.py
tests/: test_files.py
tests/files/: markdown_test1.md
tests/files/files 2/: markdown_test2.md
