[project]
name = "obs_prune"
version = "0.1.0"
description = "Cleans up dangling attachments in your Obsidian Vault"
authors = [{ name = "James Mark", email = "james.david.mark@gmail.com" }]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
linting = ["ruff>=0.2.1", "isort>=5.13.2"]

[tool.pdm.scripts]
start = "python src/obs_prune/main.py"
