[project]
name = "oprune"
version = "0.1.2"
description = "Cleans up dangling attachments in your Obsidian Vault"
authors = [{ name = "James Mark", email = "james.david.mark@gmail.com" }]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
oprune = "oprune.main:main"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
linting = ["ruff>=0.2.1", "isort>=5.13.2", "pylint>=3.0.3"]
testing = ["pytest>=8.0.0"]
dev = []

[tool.pdm.scripts]
start = "python src/oprune/main.py"
